gui/guacamole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: guacamole.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole-service
                port:
                  name: http
